# boti-dask

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/api/: diagnostics.md  resilience.md  session.md
docs/migration/: from-boti-data-distributed.md
examples/: README.md  async_distributed_pipeline.py  data_facade_dask_resilience.py  multi_worker_cluster.py  orphaned_graph_scenarios.py  session_from_env_prefix.py  shared_session_lifecycle.py  smoke_all_examples.py
src/boti_dask/: __init__.py  _internal.py  diagnostics.py  resilience.py  resilience_async.py  resilience_ops.py  session.py  session_helpers.py  session_pool.py  session_settings.py
tests/api/: test_migration_imports.py  test_public_api.py
tests/api/diagnostics/: test_diagnostics.py
tests/api/resilience/: test_resilience.py
tests/api/runtime/: test_runtime_compat.py
tests/api/session/: test_session.py
tests/examples/: test_examples.py
