[project]
name = "boti-dask"
version = "0.1.0"
description = "Dask runtime and resilience utilities for the Boti ecosystem"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask[dataframe,distributed]>=2026.3.0",
    "numpy>=2.3.0",
    "pandas>=3.0.2",
    "polars>=1.29.0",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["boti_dask*"]
