[project]
name = "boti-dask"
version = "1.0.2"
description = "Dask runtime and resilience utilities for the Boti ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Luis Valverde"}
]
maintainers = [
    {name = "Luis Valverde", email = "lvalverdeb@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "boti>=1.0.0,<2.0.0",
    "dask[dataframe,distributed]>=2026.3.0,<2027.0.0",
    "pandas>=3.0.2,<4.0.0",
]

[project.optional-dependencies]
extra = [
    "numpy>=2.3.0,<3.0.0",
    "polars>=1.29.0,<2.0.0",
    "pyarrow>=23.0.1,<24.0.0",
]

[project.urls]
Homepage = "https://github.com/lvalverdeb/boti-dask"
Repository = "https://github.com/lvalverdeb/boti-dask"
Documentation = "https://github.com/lvalverdeb/boti-dask#readme"
Issues = "https://github.com/lvalverdeb/boti-dask/issues"

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
boti_dask = ["py.typed"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["boti_dask*"]
